@@ -252,8 +252,8 @@ HaldClutImage(Image *image, const Image *clut)
     return MagickFail;
 							 
   FormatString(progress_message,
-	       "[%%s] Correcting the image with a clut of level %u ...",
-	       param.level);
+	       "[%%s] Applying Hald CLUT level %u (%lux%lu) ...",
+	       param.level,clut->columns,clut->rows);
 
   if (!IsRGBCompatibleColorspace(image->colorspace))
     TransformColorspace(image,RGBColorspace);
