@@ -107,6 +107,9 @@
 /* Have a /dev/urandom device for producing random bytes */
 #undef HAVE_DEV_URANDOM
 
+/* Define to 1 if you have the `directio' function. */
+#undef HAVE_DIRECTIO
+
 /* Define to 1 if you have the <dirent.h> header file, and it defines `DIR'.
    */
 #undef HAVE_DIRENT_H
